--- a/html/tables/table.css
+++ b/html/tables/table.css
@@ -6,6 +6,7 @@ table, th, td{
 }
 */
 table, th , td {
-	border:1px solid;
-	border-radius: 5px;
+	
+	border-radius: 4px;
+	border : 2px solid blue;
 }
